# bloodhunt

./: README.md  pyproject.toml
bloodhunt/: __main__.py  queries.json  remaining-queries.json
bloodhunt/lib/: hunter.py
bloodhunt/queries/: hunter_query.py
tests/: test_template.py
