[tool.poetry]
name = "bloodhunt"
version = "0.1.0"
description = ""
authors = ["Adam Brown <coffeegist@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/coffeegist/bloodhunt"
repository = "https://github.com/coffeegist/bloodhunt"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
typer = "^0.6.1"
neo4j = "^5.4.0"

[tool.poetry.dev-dependencies]
pylint = "^2.13"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bloodhunt = "bloodhunt.__main__:app"
